# lab4_template

./: .env  .gitignore  codecompanion-workspace.json  config_debug.json  pyproject.toml
compose/: docker-compose.debug.yaml  docker-compose.yaml
dockerfiles/: Dev.Dockerfile  Prod.Dockerfile
src/: app.py  config.py  gradio_app.py
